# libved

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake
libved/: display.cpp  display.hpp  errors.hpp  main.cpp  windowed_display.cpp  windowed_display.hpp
libved/ffmpeg/: managers.hpp  packet_queue.hpp  vaapi.cpp  vaapi.hpp
libved/ffmpeg/wrappers/: avcodec.cpp  avcodec.hpp  avformat.cpp  avformat.hpp  avutil.cpp  avutil.hpp  common.cpp  common.hpp  swresample.hpp
shaders/: basic_shader.glsl
staplegl/: CMakeLists.txt
staplegl/include/modules/: cubemap.hpp  gl_functions.hpp  texture.hpp  vertex_buffer.hpp
